# emanote-sitemap-generator

./: .gitignore  .hlint.yaml  Dockerfile  Justfile  LICENSE  README.md  devshell.toml  emanote-sitemap-generator.cabal  flake.nix  package.yaml  shell.nix  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
nix/modules/flake-parts/: devshell.nix  haskell.nix
src/: Init.hs  Main.hs
